2001-12-10  Yoshinori K. Okuji  <okuji@gnu.org>

	* grub/asmstub.c: Include <signal.h>.
	(grub_stage2) [HAVE_LIBCURSES]: If USE_CURSES is true, ignore
	the signal SIGWINCH. Reported by Christian Hudon
	<chrish@debian.org>.

2001-11-29  Yoshinori K. Okuji  <okuji@gnu.org>

	From Jason Thomas:
	* stage2/disk_io.c (set_partition_hidden_flag): Complete rewrite
	of this function which now supports logical partitions.
	
2001-11-12  Yoshinori K. Okuji  <okuji@gnu.org>

	* docs/grub.texi: The copyright of this file is only held by
	Free Software Foundation, Inc., as Erich Boleyn has assigned his
	copyright to the FSF.
	* stage1/stage1.S: Likewise.
	* stage2/asm.S: Likewise.
	* stage2/boot.c: Likewise.
	* stage2/builtins.c: Likewise.
	* stage2/char_io.c: Likewise.
	* stage2/cmdline.c: Likewise.
	* stage2/common.c: Likewise.
	* stage2/disk_io.c: Likewise.
	* stage2/fat.h: Likewise.
	* stage2/filesys.h: Likewise.
	* stage2/freebsd.h: Likewise.
	* stage2/fsys_ext2fs.c: Likewise.
	* stage2/fsys_fat.c: Likewise.
	* stage2/fsys_ffs.c: Likewise.
	* stage2/gunzip.c: Likewise.
	* stage2/i386-elf.h: Likewise.
	* stage2/mb_header.h: Likewise.
	* stage2/mb_info.h: Likewise.
	* stage2/pc_slice.h: Likewise.
	* stage2/shared.h: Likewise.
	* stage2/stage1_5.c: Likewise.
	* stage2/stage2.c: Likewise.
	* stage2/start.S: Likewise.
	
2001-11-07  Yoshinori K. Okuji  <okuji@gnu.org>

	* stage2/builtins.c (terminal_func) [!SUPPORT_SERIAL]: Disable
	the wait code, as it is usable only when serial support is on.
	Reported by Karl Hammar <karl@kalle.csb.ki.se>.
	
2001-10-27  Yoshinori K. Okuji  <okuji@gnu.org>

	JFS and XFS support is added.
	
	From Serguei Tzukanov <tzukanov@narod.ru>:
	* configure.in (--disable-jfs): New option.
	(--disable-xfs): Likewise.
	* stage2/Makefile.am (noinst_HEADERS): Added jfs.h and xfs.h.
	(libgrub_a_SOURCES): Added fsys_jfs.c and fsys_xfs.c.
	(libgrub_a_CFLAGS): Added -DFSYS_JFS=1 and -DFSYS_XFS=1.
	(pkgdata_DATA): Added jfs_stage1_5 and xfs_stage1_5.